# Tool-placement-policy

./: .gitignore  AGENTVOCAB_PARATOOL_REPRO_COMMANDS.md  EXPERIMENT_PROGRESS.md  LEVEL1_REPRO_COMMANDS.md  MCP_Flow_reproduction_notes.md  REPRESENTATION_SIGNAL_COMMANDS.md  adaptive_tool_placement_experiment_plan.md
AgentVocab-main/: .gitignore  README.md  pyproject.toml  requirements.txt
AgentVocab-main/examples/: evaluate_swift_native.sh  train_stage1_lora.sh  train_stage2_lora.sh
AgentVocab-main/outputs/data/: mcpflow_actual_content.jsonl  mcpflow_structural_spans.txt
AgentVocab-main/outputs/tokens/: mcpflow_structural_scored_qwen25_7b.json  mcpflow_structural_scored_smoke.json  top_100_reachable_structural_tokens.json  top_200_reachable_structural_tokens.json
AgentVocab-main/scripts/: aggregate_results.py  convert_toucan_to_swift.py  expand_tokenizer.py  filter_valid_data.py  merge_lora_checkpoints.py  mine_content_tokens.py  mine_structural_tokens.py  mix_tokens.py  render_swift_actual_content.py  select_reachable_tokens.py  split_structural_content.py
AgentVocab-main/src/agentvocab/: __init__.py  data.py  evaluation.py  export.py  io.py  mining.py  reachability.py  tokenizer_utils.py
MCP-Flow/: EXPERIMENT_PROGRESS.md  README.md
ParaTool-main/: .gitignore  LICENSE  README.md  bfcl_inference.py  gating_network.py  requirements.txt  root_dir_path.py  sitecustomize.py  soft_tool_selection_train.py  stb_inference.py  tool_finetuning.py  tool_pretraining.py  toolbench_runtime.py  utils.py
refine-logs/: EXPERIMENT_PLAN.md  EXPERIMENT_TRACKER.md
(+58 files in other folders)
